# Apex-ai-agent

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release-apk.yml  security.yml
ai-terminal/: ADVANCED_AGENT_GUIDE.md  AGENT_GUIDE.md  HISTORY_MANAGER_GUIDE.md  IMPLEMENTATION_ROADMAP.md  README.md  ROOT_MODE_GUIDE.md  SKILLS_GUIDE.md  build.gradle.kts
ai-terminal/src/main/: AndroidManifest.xml
ai-terminal/src/main/cpp/: CMakeLists.txt  flashing_helper.cpp  flashing_helper.h  performance_monitor.cpp  performance_monitor.h  process_manager.cpp  process_manager.h  root_session.h  root_terminal_core.cpp  shell_adapter.cpp  shell_extension.cpp  shell_extension.h  terminal_jni.cpp  terminal_session.cpp  terminal_session.h
apk/diagnostics/: build.gradle.kts
apk/engine/: build.gradle.kts
apk/market/: build.gradle.kts  proguard-rules.pro
apk/multi-agent/: build.gradle.kts
apk/rage/: build.gradle.kts
apk/terminal/: build.gradle.kts
apk/voice/: build.gradle.kts
apk/workflow/: build.gradle.kts
apk/working-files/: build.gradle.kts
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/streamnative/plugins/: StreamXmlPlugin.cpp
background/: build.gradle.kts  consumer-rules.pro
background/src/main/: AndroidManifest.xml
build-logic/: README.md  settings.gradle.kts
build-logic/convention/: build.gradle.kts
code-analyzer/: README.md
code-analyzer/src/: index.ts
code-analyzer/src/analyzer/: CodeAnalyzer.ts  CodeAnalyzerFactory.ts  JavaScriptAnalyzer.ts  TypeScriptAnalyzer.ts
code-generator/: README.md  example.ts  package.json  tsconfig.json
code-generator/src/: index.ts
code-generator/src/assistant/: ProgrammingAssistant.ts  TypeScriptAssistant.ts
code-generator/src/generator/: CodeGenerator.ts  CodeGeneratorFactory.ts  (+1 more)
core/burst-kernel/: build.gradle.kts
core/burst-mode/: README.md  build.gradle.kts
core/integration/: README.md  build.gradle.kts
database/: build.gradle.kts  proguard-rules.pro
docs/: AGENT_SELF_MODIFY_SPEC.md  API_Documentation.md  DOWNLOAD_GUIDE.md  INTEGRATION_GUIDE.md  MANUAL_DOWNLOAD_LLAMA.md  MODEL_SWITCHER_GUIDE.md  MODULE_SETUP_GUIDE.md  NVIDIA_AI_INTEGRATION_PLAN.md  README(E).md  README.md  SKILL_SYSTEM.md  TOOL_SKILL_SELECTION_GUIDE.md  apex-ui-preview.html  plugin-repo-index.json
docs/architecture/: AGENT_TERMINAL_EXECUTOR.md  APEX_EXCLUSIVE_ENHANCEMENTS.md  API_REFERENCE.md  APK_DEPENDENCIES.md  MARKET_ENHANCEMENTS.md  MODULE_OWNERSHIP.md  MULTI_AGENT_ENHANCEMENTS.md  MULTI_APK_ARCHITECTURE.md  RAGE_ENHANCEMENTS.md  WORKING_FILES_VSCODE.md
domain/: build.gradle.kts
engine/: build.gradle.kts  proguard-rules.pro
file/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/engine/: build.gradle.kts  consumer-rules.pro
lib/market/: build.gradle.kts  consumer-rules.pro
lib/multi-agent/: build.gradle.kts  consumer-rules.pro
lib/rage/: build.gradle.kts  consumer-rules.pro
lib/terminal/: build.gradle.kts  consumer-rules.pro
lib/voice/: build.gradle.kts  consumer-rules.pro
lib/workflow/: build.gradle.kts  consumer-rules.pro
lib/working-files/: build.gradle.kts  consumer-rules.pro
plugins/burst-base/: build.gradle.kts
plugins/burst-builtin/: build.gradle.kts
rage-jni/: consumer-rules.pro  proguard-rules.pro
rage-native/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
scripts/code_audit/: run_audit.ps1  run_audit.sh  scan_empty_shells.ps1  scan_empty_shells.sh  scan_incomplete.ps1  scan_incomplete.sh  scan_logic_errors.ps1  scan_logic_errors.sh
sdk/auth/: build.gradle.kts  consumer-rules.pro
sdk/common-core/: build.gradle.kts  consumer-rules.pro
sdk/common-ui/: build.gradle.kts  consumer-rules.pro
sdk/process-bridge/: build.gradle.kts  consumer-rules.pro
sdk/storage/: build.gradle.kts  consumer-rules.pro
sdk/watchdog/: build.gradle.kts  consumer-rules.pro
self-modify/: build.gradle.kts
web/: .gitignore  README.md
web-legacy/: COMPLETE_WEBSITE_DESIGN_PROMPT.md  about.html  combined.html  docs.html  download.html  download_plan.md  features.html  index.html  web.txt  web2.txt  web3.txt
(+2021 files in other folders)
